--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,6 @@ yarn-debug.log*
 yarn-error.log*
 
 ihm-swgoh.iml
-.idea/
+/.idea/
 package-lock.json
-src/react-app-env.d.ts
+/src/react-app-env.d.ts
