--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
     ],
     "rules": {
         "indent": ["off"],
+        "max-len": 0,
+        "arrow-body-style": 0,
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": ["error"],
         "react/prefer-stateless-function": [0],
