--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "antd": "^4.16.13",
+    "axios": "^0.23.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-audio-player": "^0.17.0",
